--- a/package.json
+++ b/package.json
@@ -49,9 +49,7 @@
     "liquibase": "^4.4.0",
     "path": "^0.12.7",
     "pg": "^8.7.1",
-    "yargs": "^17.2.1"
-  },
-  "devDependencies": {
+    "yargs": "^17.2.1",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^16.0.0",
     "@types/jest": "^27.0.2",
